{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 148,
  "lineage": "18f612b2-441c-9e2e-5675-f5364cf37325",
  "resources": [
    {
      "module": "module.testinstance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067c3d59aa0bcc740",
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:instance/i-0c0adb1c05cb56af7",
            "associate_public_ip_address": false,
            "availability_zone": "cn-northwest-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2instance",
            "id": "i-0c0adb1c05cb56af7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "zabbix",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b47bb45f7f3507b2",
            "private_dns": "ip-192-168-186-50.cn-northwest-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.186.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0af1ef8b89f200b1d",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ed6d22b3dd61d19",
            "tags": {
              "Name": "gehc-709-test-instance"
            },
            "tags_all": {
              "Name": "gehc-709-test-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042e13050ee443b84"
            ]
          },
          "dependencies": [
            "module.testsg.aws_security_group.test-sg",
            "module.testvpc.aws_subnet.test-subnet",
            "module.testvpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.testsg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:security-group/sg-042e13050ee443b84",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-042e13050ee443b84",
            "ingress": [],
            "name": "gehc-709-test-sg",
            "name_prefix": "",
            "owner_id": "056406132709",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "gehc-709-test-sg"
            },
            "tags_all": {
              "Name": "gehc-709-test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee6729e97d7a6b9b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.testvpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.testsg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.186.0/25",
              "192.168.186.240/28"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1753448071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042e13050ee443b84",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.testsg.aws_security_group.test-sg",
            "module.testvpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.186.0/25",
              "192.168.186.240/28"
            ],
            "description": null,
            "from_port": 21,
            "id": "sgrule-3167257110",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042e13050ee443b84",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 21,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.testsg.aws_security_group.test-sg",
            "module.testvpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.186.0/25",
              "192.168.186.240/28"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3758708672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042e13050ee443b84",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.testsg.aws_security_group.test-sg",
            "module.testvpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "192.168.186.0/25",
              "192.168.186.240/28"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3670359261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-042e13050ee443b84",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.testsg.aws_security_group.test-sg",
            "module.testvpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.testsg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "test1-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1107399839",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-042e13050ee443b84",
            "security_group_rule_id": "sgr-0af312823fc257550",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.testsg.aws_security_group.test-sg",
            "module.testvpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test-connect",
      "provider": "module.testvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f0d75cf4d7605e6",
            "route_table_id": "rtb-079ccf56ed5eccf88",
            "subnet_id": "subnet-06ed6d22b3dd61d19"
          },
          "dependencies": [
            "module.testvpc.aws_subnet.test-subnet",
            "module.testvpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bca04706ead7fcbf",
            "route_table_id": "rtb-079ccf56ed5eccf88",
            "subnet_id": "subnet-0ad1192debb41d174"
          },
          "dependencies": [
            "module.testvpc.aws_subnet.test-subnet",
            "module.testvpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-subnet",
      "provider": "module.testvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:subnet/subnet-06ed6d22b3dd61d19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1a",
            "availability_zone_id": "cnnw1-az1",
            "cidr_block": "192.168.186.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ed6d22b3dd61d19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056406132709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gehc-709-test-subnet"
            },
            "tags_all": {
              "Name": "gehc-709-test-subnet"
            },
            "vpc_id": "vpc-0ee6729e97d7a6b9b"
          },
          "dependencies": [
            "module.testvpc.aws_vpc.test-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:subnet/subnet-0ad1192debb41d174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "cn-northwest-1b",
            "availability_zone_id": "cnnw1-az2",
            "cidr_block": "192.168.186.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad1192debb41d174",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056406132709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gehc-709-test-subnet"
            },
            "tags_all": {
              "Name": "gehc-709-test-subnet"
            },
            "vpc_id": "vpc-0ee6729e97d7a6b9b"
          },
          "dependencies": [
            "module.testvpc.aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.testvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "module.testvpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws-cn:ec2:cn-northwest-1:056406132709:vpc/vpc-0ee6729e97d7a6b9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.186.0/24",
            "default_network_acl_id": "acl-0841e520fbae57a4c",
            "default_route_table_id": "rtb-079ccf56ed5eccf88",
            "default_security_group_id": "sg-0802821f87cffe111",
            "dhcp_options_id": "dopt-0321286bf444fa6c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ee6729e97d7a6b9b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-079ccf56ed5eccf88",
            "owner_id": "056406132709",
            "tags": {
              "Name": "gehc-709-test-vpc"
            },
            "tags_all": {
              "Name": "gehc-709-test-vpc"
            }
          }
        }
      ]
    }
  ]
}